# Job_Parser_upd

./: README.md  exceptions.py  main.py  pyproject.toml  utils.py
source/: base.py
source/hh_api/: headhunter_api.py
source/hh_api/jsonhandler/: jsonhandler.py
source/jsonhandler/: jsonhandler.py
source/sj_api/: superjob_api.py
source/vacancies/: hh_vacancy.py  vacancy.py
