[tool.poetry]
name = "job-parser-upd"
version = "0.1.0"
description = ""
authors = ["Memorizu <kaidohmary@gmail.com>"]
readme = "README.md"
packages = [{include = "job_parser_upd"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
